--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container-logo">
-            
+            <img src="img/logo.png" alt="logo">
         </div>
     </header>
 </body>
