--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <title>Sabrina Modas | Home</title>
 </head>
+
 <body>
     <header>
         <div class="container-logo">
             <img src="img/logo.png" alt="logo">
         </div>
+        <div class="container-menu">
+            <nav class="container-menu--nav">
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/">Produtos</a>
+                    </li>
+                    <li>
+                        <a href="/">Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="container-source">
+            <input type="search">
+        </div>
+        <div class="container-login">
+            <p>Login</p>
+        </div>
+        <div class="container-carrinho">
+            <p>Carrinho</p>
+        </div>
     </header>
 </body>
+
 </html>
