--- a/index.html
+++ b/index.html
@@ -5,42 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Sabrina Modas | Home</title>
 </head>
 
 <body>
-    <header>
-        <div class="container-logo">
-            <img src="img/logo.png" alt="logo">
-        </div>
-        <div class="container-menu">
-            <nav class="container-menu--nav">
-                <ul>
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="/">Produtos</a>
-                    </li>
-                    <li>
-                        <a href="/">Contato</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="container-source">
-            <input type="search">
-        </div>
-        <div class="container-login">
-            <p>Login</p>
-        </div>
-        <div class="container-carrinho">
-            <p>Carrinho</p>
-        </div>
+    <header class="header">
+
+        <nav class="nav">
+
+            <div class="container-logo">
+                <a href="#">
+                    <img src="img/logo.png" alt="logo" class="logo-header">
+                </a>
+            </div>
+
+        </nav>
+
     </header>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
