--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
 
             <ul class="nav-list">
-                <li class="nav-link">
+                <li class="nav-link nav-link-active">
                     <a href="#">Home</a>
                 </li>
                 <li class="nav-link">
@@ -29,6 +29,10 @@
                     <a href="#">Contato</a>
                 </li>
             </ul>
+
+            <input type="search" placeholder="O que deseja procurar ?" />
+
+
 
         </nav>
 
