--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </li>
             </ul>
 
-            <input type="search" placeholder="O que deseja procurar ?" />
+            <input class="input-seach" type="search" placeholder="O que deseja procurar?" />
 
 
 
