--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link href="/dist/output.css" rel="stylesheet">
     <title>Sabrina Modas | Home</title>
 </head>
 
@@ -19,23 +20,30 @@
             </a>
 
             <ul class="nav-list">
-                <li class="nav-link nav-link-active">
+                <li class="nav-item">
                     <a href="#">Home</a>
                 </li>
-                <li class="nav-link">
+                <li class="nav-item">
                     <a href="#">Produtos</a>
                 </li>
-                <li class="nav-link">
+                <li class="nav-item">
                     <a href="#">Contato</a>
                 </li>
             </ul>
-
-            <input class="input-seach" type="search" placeholder="O que deseja procurar?" />
-
-
-
         </nav>
 
+        <div class="input-search">
+            <input class="input" type="search" placeholder="Pesquisar" />
+            <img class="input-icon" src="img/procurar.png" alt="procurar">
+        </div>
+
+        <div class="carrinho-compras">
+            <img src="img/carrinho.png" alt="carrinho">
+        </div>
+
+        <div class="perfil">
+            <img src="img/perfil.png" alt="perfil">
+        </div>
     </header>
 </body>
 
