header e banner finalizado

--- a/index.html
+++ b/index.html
@@ -44,7 +44,19 @@
         <div class="perfil">
             <img src="img/perfil.png" alt="perfil">
         </div>
+
     </header>
+
+    <div class="container-hr">
+        <hr class="hr-header">
+    </div>
+
+    <main>
+        <div class="banner-container">
+            <img class="banner" src="img/banner.png" alt="banner">
+        </div>
+    </main>
+    
 </body>
 
 </html>
