começando os cards

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <img src="img/logo.png" alt="logo" class="logo-header">
             </a>
 
+
+
             <ul class="nav-list">
                 <li class="nav-item">
                     <a href="#">Home</a>
@@ -33,17 +35,21 @@
         </nav>
 
         <div class="input-search">
-            <input class="input" type="search" placeholder="Pesquisar" />
+            <input class="input" type="search" placeholder="Faça sua pesquisa" />
             <img class="input-icon" src="img/procurar.png" alt="procurar">
         </div>
 
-        <div class="carrinho-compras">
-            <img src="img/carrinho.png" alt="carrinho">
+        <div class="container-icons">
+            <div class="carrinho-compras">
+                <img src="img/carrinho.png" alt="carrinho">
+            </div>
+
+            <div class="perfil">
+                <img src="img/perfil.png" alt="perfil">
+            </div>
         </div>
 
-        <div class="perfil">
-            <img src="img/perfil.png" alt="perfil">
-        </div>
+
 
     </header>
 
@@ -52,11 +58,22 @@
     </div>
 
     <main>
-        <div class="banner-container">
+
+        <section class="banner-container">
             <img class="banner" src="img/banner.png" alt="banner">
-        </div>
+        </section>
+
+        <section class="container-destaques">
+            <h2 class="titulo-destaques">Destaques</h2>
+
+            <div class="container-card">
+                
+            </div>
+        </section>
+
+
     </main>
-    
+
 </body>
 
 </html>
