--- a/index.html
+++ b/index.html
@@ -67,7 +67,72 @@
             <h2 class="titulo-destaques">Destaques</h2>
 
             <div class="container-card">
-                
+                <div class="card">
+                    <div class="card-img">
+                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                    </div>
+                    <div class="card-descricao">
+                        <p class="descricao-card">Conjunto Planet Girls</p>
+                    </div>
+                    <div class="card-preco">
+                        <p class="preco-card">R$ 80,00</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                    </div>
+                    <div class="card-descricao">
+                        <p class="descricao-card">Conjunto Planet Girls</p>
+                    </div>
+                    <div class="card-preco">
+                        <p class="preco-card">R$ 80,00</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                    </div>
+                    <div class="card-descricao">
+                        <p class="descricao-card">Conjunto Planet Girls</p>
+                    </div>
+                    <div class="card-preco">
+                        <p class="preco-card">R$ 80,00</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                    </div>
+                    <div class="card-descricao">
+                        <p class="descricao-card">Conjunto Planet Girls</p>
+                    </div>
+                    <div class="card-preco">
+                        <p class="preco-card">R$ 80,00</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                    </div>
+                    <div class="card-descricao">
+                        <p class="descricao-card">Conjunto Planet Girls</p>
+                    </div>
+                    <div class="card-preco">
+                        <p class="preco-card">R$ 80,00</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                    </div>
+                    <div class="card-descricao">
+                        <p class="descricao-card">Conjunto Planet Girls</p>
+                    </div>
+                    <div class="card-preco">
+                        <p class="preco-card">R$ 80,00</p>
+                    </div>
+                </div>
             </div>
         </section>
 
