--- a/index.html
+++ b/index.html
@@ -63,82 +63,251 @@
             <img class="banner" src="img/banner.png" alt="banner">
         </section>
 
-        <section class="container-destaques">
-            <h2 class="titulo-destaques">Destaques</h2>
+        <section class="container-categoria">
+            <h2 class="titulo-categoria">Destaques</h2>
 
             <div class="container-card">
                 <div class="card">
-                    <div class="card-img">
-                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
                     </div>
-                    <div class="card-descricao">
-                        <p class="descricao-card">Conjunto Planet Girls</p>
-                    </div>
-                    <div class="card-preco">
-                        <p class="preco-card">R$ 80,00</p>
-                    </div>
+                    <button class="add-carrinho">Adicione</button>
                 </div>
                 <div class="card">
-                    <div class="card-img">
-                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto2.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
                     </div>
-                    <div class="card-descricao">
-                        <p class="descricao-card">Conjunto Planet Girls</p>
-                    </div>
-                    <div class="card-preco">
-                        <p class="preco-card">R$ 80,00</p>
-                    </div>
+                    <button class="add-carrinho">Adicione</button>
                 </div>
                 <div class="card">
-                    <div class="card-img">
-                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto3.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
                     </div>
-                    <div class="card-descricao">
-                        <p class="descricao-card">Conjunto Planet Girls</p>
-                    </div>
-                    <div class="card-preco">
-                        <p class="preco-card">R$ 80,00</p>
-                    </div>
+                    <button class="add-carrinho">Adicione</button>
                 </div>
                 <div class="card">
-                    <div class="card-img">
-                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto4.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
                     </div>
-                    <div class="card-descricao">
-                        <p class="descricao-card">Conjunto Planet Girls</p>
-                    </div>
-                    <div class="card-preco">
-                        <p class="preco-card">R$ 80,00</p>
-                    </div>
+
+                    <button class="add-carrinho">Adicione</button>
                 </div>
                 <div class="card">
-                    <div class="card-img">
-                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto5.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
                     </div>
-                    <div class="card-descricao">
-                        <p class="descricao-card">Conjunto Planet Girls</p>
-                    </div>
-                    <div class="card-preco">
-                        <p class="preco-card">R$ 80,00</p>
-                    </div>
+                    <button class="add-carrinho">Adicione</button>
                 </div>
                 <div class="card">
-                    <div class="card-img">
-                        <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto6.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
                     </div>
-                    <div class="card-descricao">
-                        <p class="descricao-card">Conjunto Planet Girls</p>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
                     </div>
-                    <div class="card-preco">
-                        <p class="preco-card">R$ 80,00</p>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
                     </div>
+                    <button class="add-carrinho">Adicione</button>
                 </div>
             </div>
         </section>
 
+        <section class="container-categoria">
+            <h2 class="titulo-categoria">Mais Vendidos</h2>
+
+            <div class="container-card">
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto2.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto3.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto4.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto5.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto6.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+            </div>
+        </section>
 
     </main>
 
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
