base do index finalizada

--- a/index.html
+++ b/index.html
@@ -305,8 +305,52 @@
 
     </main>
 
-    <footer>
-        
+    <footer class="footer">
+        <div class="footer--cabecalho">
+            <div class="footer--titulo-newsletter">
+                <h3>CADASTRE-SE EM NOSSA NEWSLETTER</h3>
+                <h4>e receba novidades e promoções da nossa loja</h4>
+            </div>
+
+            <div class="footer--compo-texto">
+                <div class="campo-texto">
+                    <input class="input-footer" type="email" placeholder="Digite seu email">
+                    <button class="button-footer">Cadastre-se</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-hr">
+            <hr class="footer-hr">
+        </div>
+
+        <div class="footer--rodape">
+            <div class="footer--midia">
+                <img src="img/logo.png" alt="logo rodape" class="logo-rodape">
+                <div class="footer--midia-redesociais">
+
+                    <img src="img/facebook.png" alt="facebook" class="footer-icons">
+
+                    <img src="img/instagram.png" alt="instagram" class="footer-icons">
+                </div>
+            </div>
+            <div class="footer--contatos">
+                <h4>Atendimento</h4>
+                <div class="footer--item-contato">
+                    <img src="img/celular.png" alt="celular" class="footer-icons">
+                    <p>(11) 997135477</p>
+                </div>
+                <div class="footer--item-contato">
+                    <img src="img/email.png" alt="email.png" class="footer-icons">
+                    <p>contato@wallyssonsousa.com.br</p>
+                </div>
+            </div>
+            <div class="footer--pagamento">
+                <h4>Formas de pagamento</h4>
+                <img src="img/lista-pagamentos.png" alt="lista-pagamentos">
+            </div>
+        </div>
+
     </footer>
 </body>
 
