--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Produtos</a>
+                    <a href="views/Produtos/index.html">Produtos</a>
                 </li>
                 <li class="nav-item">
                     <a href="#">Contato</a>
