--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="views/Produtos/index.html">Produtos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Contato</a>
+                    <a href="./views/Contato/index.html">Contato</a>
                 </li>
             </ul>
         </nav>
