--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <p class="preco-card">R$ 80,00</p>
                         </div>
                     </div>
-                    <button class="add-carrinho">Adicione</button>
+                    <button class="add-carrinho" href="views/Pagamento/index.html">Adicione</button>
                 </div>
                 <div class="card">
 
