começando modo dark

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
             </div>
         </div>
 
+        <div>
+            <input type="checkbox" class="checkbox" id="chk" />
+            <label class="label" for="chk">
+              <i class="fas fa-moon"></i>
+              <i class="fas fa-sun"></i>
+              <div class="ball"></div>
+            </label>
+          </div>
+
 
 
     </header>
@@ -351,6 +360,9 @@
         </div>
 
     </footer>
+
+    <script src="js/script.js"></script>
+    <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
