--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
     <header class="header">
 
         <nav class="nav">
@@ -49,26 +50,19 @@
         </div>
 
         <div>
-            <input type="checkbox" class="checkbox" id="chk" />
-            <label class="label" for="chk">
-              <i class="fas fa-moon"></i>
-              <i class="fas fa-sun"></i>
-              <div class="ball"></div>
+            <label class="switch">
+                <input type="checkbox" checked="checked" id="chk" />
+                <span class="slider"></span>
             </label>
-          </div>
-
-
+                
+        </div>
 
     </header>
-
-    <div class="container-hr">
-        <hr class="hr-header">
-    </div>
 
     <main>
 
         <section class="banner-container">
-            <img class="banner" src="img/banner.png" alt="banner">
+            <img class="banner" src="img/banner.jpg" alt="banner">
         </section>
 
         <section class="container-categoria">
