--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="js/modoNoturno.js"></script>
     <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 </body>
 
