Refatorando algumas coisas

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="#">Home</a>
+                    <a class="item" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="views/Produtos/index.html">Produtos</a>
+                    <a class="item" href="views/Produtos/index.html">Produtos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./views/Contato/index.html">Contato</a>
+                    <a class="item" href="./views/Contato/index.html">Contato</a>
                 </li>
             </ul>
         </nav>
