--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
                 <img src="img/carrinho.png" alt="carrinho">
             </div>
 
-            <div class="perfil">
-                <img src="img/perfil.png" alt="perfil">
+            <div class="perfil dropdown">
+                <img src="img/perfil.png" alt="perfil" class="icon">
+                <div class="dropdown-content">
+<!--                     <a href="views/Login/index.html">Login</a>
+                    <a href="views/Cadastro/index.html">Cadastro</a> -->
+                </div>
             </div>
         </div>
 
@@ -322,8 +326,8 @@
     <footer class="footer">
         <div class="footer--cabecalho">
             <div class="footer--titulo-newsletter">
-                <h3>CADASTRE-SE EM NOSSA NEWSLETTER</h3>
-                <h4>e receba novidades e promoções da nossa loja</h4>
+                <h3>CADASTRE-SE </h3>
+                <h4>para receba novidades e promoções da nossa loja</h4>
             </div>
 
             <div class="footer--compo-texto">
@@ -359,15 +363,12 @@
                     <p>contato@wallyssonsousa.com.br</p>
                 </div>
             </div>
-            <div class="footer--pagamento">
-                <h4>Formas de pagamento</h4>
-                <img src="img/lista-pagamentos.png" alt="lista-pagamentos">
-            </div>
         </div>
 
     </footer>
 
     <script src="js/modoNoturno.js"></script>
+    <script src="js/dropdownUsuario.js"></script>
     <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 </body>
 
