--- a/index.html
+++ b/index.html
@@ -57,11 +57,16 @@
                 <img src="img/carrinho.png" alt="carrinho">
             </div>
 
-            <div class="perfil dropdown">
+            <div class="perfil">
                 <img src="img/perfil.png" alt="perfil" class="icon">
-                <div class="dropdown-content">
-<!--                     <a href="views/Login/index.html">Login</a>
-                    <a href="views/Cadastro/index.html">Cadastro</a> -->
+
+                <div class="container-login-cadastro">
+                    <h4 class="nome-conta">Minha conta</h4>
+                    <div class="login-cadastro">
+                        <a href="views/Login/index.html">Login</a>
+                        <p>/</p>
+                        <a href="views/Cadastro/index.html">Cadastro</a>
+                    </div>
                 </div>
             </div>
         </div>
