--- a/index.html
+++ b/index.html
@@ -15,53 +15,58 @@
 
     <header class="header">
 
-        <nav class="nav">
+        <div class="line-header">
+
+            <div class="mobile-menu-icon">
+                <button class="menu-button" onclick="menuShow()"><img class="icon-mobile"
+                        src="img/menu-icon.svg" /></button>
+            </div>
 
             <a href="#">
                 <img src="img/logo.png" alt="logo" class="logo-header">
             </a>
 
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a class="item" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="item" href="views/Produtos/index.html">Produtos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="item" href="./views/Contato/index.html">Contato</a>
-                </li>
-            </ul>
-        </nav>
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a class="item" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="item" href="views/Produtos/index.html">Produtos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="item" href="./views/Contato/index.html">Contato</a>
+                    </li>
+                </ul>
+            </nav>
 
-        <form class="form input-serch">
-            <button>
-                <svg width="17" height="16" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
-                    aria-labelledby="search">
-                    <path d="M7.667 12.667A5.333 5.333 0 107.667 2a5.333 5.333 0 000 10.667zM14.334 14l-2.9-2.9"
-                        stroke="currentColor" stroke-width="1.333" stroke-linecap="round" stroke-linejoin="round">
-                    </path>
-                </svg>
-            </button>
-            <input class="input" placeholder="Faça sua pesquisa" required="" type="text">
-            <button class="reset" type="reset">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                    stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
-                </svg>
-            </button>
-        </form>
+            <form class="form input-serch">
+                <button>
+                    <svg width="17" height="16" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
+                        aria-labelledby="search">
+                        <path d="M7.667 12.667A5.333 5.333 0 107.667 2a5.333 5.333 0 000 10.667zM14.334 14l-2.9-2.9"
+                            stroke="currentColor" stroke-width="1.333" stroke-linecap="round" stroke-linejoin="round">
+                        </path>
+                    </svg>
+                </button>
+                <input class="input" placeholder="Faça sua pesquisa" required="" type="text">
+                <button class="reset" type="reset">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
+                    </svg>
+                </button>
+            </form>
 
-        <div class="container-icons">
-            <div class="carrinho-compras">
-                <img src="img/carrinho.png" alt="carrinho">
+            <div class="container-icons">
+                <div class="carrinho-compras">
+                    <img src="img/carrinho.png" alt="carrinho">
+                </div>
             </div>
 
             <div class="perfil">
-                <img src="img/perfil.png" alt="perfil" class="icon">
-
                 <div class="container-login-cadastro">
-                    <h4 class="nome-conta">Minha conta</h4>
+                    <h4 class="nome-conta">Faça login</h4>
                     <div class="login-cadastro">
                         <a href="views/Login/index.html">Login</a>
                         <p>/</p>
@@ -69,15 +74,82 @@
                     </div>
                 </div>
             </div>
+
+            <div>
+                <label class="switch">
+                    <input type="checkbox" checked="checked" id="chk" />
+                    <span class="slider"></span>
+                </label>
+            </div>
+
         </div>
 
-        <div>
-            <label class="switch">
-                <input type="checkbox" checked="checked" id="chk" />
-                <span class="slider"></span>
-            </label>
+        <!--Menu Mobile-->
+
+        <div class="line-bottom">
+
+            <div class="menu-mobile">
+
+                <div class="menu-mobile-header">
+
+                    <div class="perfil-mobile">
+                        <div class="container-login-cadastro">
+                            <h4 class="nome-conta">Faça login</h4>
+                            <div class="login-cadastro">
+                                <a href="views/Login/index.html">Login</a>
+                                <p>/</p>
+                                <a href="views/Cadastro/index.html">Cadastro</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container-icons-mobile">
+                        <div class="carrinho-compras">
+                            <img src="img/carrinho.png" alt="carrinho">
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="menu-mobile-bottom">
+                    <nav class="nav-mobile">
+                        <ul class="nav-list-mobile">
+                            <li class="nav-item">
+                                <a class="item" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="item" href="views/Produtos/index.html">Produtos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="item" href="./views/Contato/index.html">Contato</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
 
+        <div class="line-form">
+
+            <form class="form input-serch form-mobile">
+                <button>
+                    <svg width="17" height="16" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
+                        aria-labelledby="search">
+                        <path d="M7.667 12.667A5.333 5.333 0 107.667 2a5.333 5.333 0 000 10.667zM14.334 14l-2.9-2.9"
+                            stroke="currentColor" stroke-width="1.333" stroke-linecap="round" stroke-linejoin="round">
+                        </path>
+                    </svg>
+                </button>
+                <input class="input" placeholder="Faça sua pesquisa" required="" type="text">
+                <button class="reset" type="reset">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
+                    </svg>
+                </button>
+            </form>
+
+        </div>
     </header>
 
     <main>
@@ -372,6 +444,7 @@
 
     </footer>
 
+    <script src="js/menuResponsivo.js"></script>
     <script src="js/modoNoturno.js"></script>
     <script src="js/dropdownUsuario.js"></script>
     <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
