responsividade do index e produtos terminado, 09/10 começando o back-end

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
             <div class="footer--compo-texto">
                 <div class="campo-texto">
-                    <input class="input-footer" type="email" placeholder="Digite seu email">
+                    <input class="input-footer" type="email" placeholder="Digite seu email: ">
                     <button class="button-footer">Cadastre-se</button>
                 </div>
             </div>
