--- a/index.html
+++ b/index.html
@@ -155,7 +155,13 @@
     <main>
 
         <section class="banner-container">
-            <img class="banner" src="img/banner.jpg" alt="banner">
+            <div class="container-banners">
+                <div class="slide">
+                    <div>
+                        <img src="img/Banner-2.jpeg" alt="Imagem 2" class="banner">
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="container-categoria">
@@ -428,6 +434,8 @@
                     <h4 class="titulos-footer">Links úteis</h4>
                     <ul>
                         <li><a class="footer-item" href="views/Contato/index.html">Página de contato</a></li>
+                        <li><a class="footer-item" href="https://www.instagram.com/sabrinamodaas___/">Nosso
+                                instagram</a></li>
                     </ul>
                 </div>
             </div>
@@ -458,16 +466,13 @@
                 </a>
             </div>
         </div>
-
-
-
     </footer>
 
+    <script src="js/carrossel.js"></script>
     <script src="js/buttonVoltarTopo.js"></script>
     <script src="js/menuResponsivo.js"></script>
     <script src="js/modoNoturno.js"></script>
     <script src="js/dropdownUsuario.js"></script>
-    <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
