--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="/dist/output.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Sabrina Modas | Home</title>
+
+    
 </head>
 
 <body>
@@ -154,7 +156,7 @@
 
     <main>
 
-        <section class="banner-container">
+        <!--         <section class="banner-container">
             <div class="container-banners">
                 <div class="slide">
                     <div>
@@ -162,7 +164,13 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
+
+        <div class="container-banners">
+            <img src="img/Banner-2.jpeg" alt="">
+            <img src="img/Banner-1.jpeg" alt="">
+            <img src="img/banner.jpg" alt="">
+        </div>
 
         <section class="container-categoria">
             <h2 class="titulo-categoria">Destaques</h2>
@@ -467,6 +475,10 @@
             </div>
         </div>
     </footer>
+
+
+
+    
 
     <script src="js/carrossel.js"></script>
     <script src="js/buttonVoltarTopo.js"></script>
