--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Sabrina Modas | Home</title>
 
-    
+
 </head>
 
 <body>
@@ -166,11 +166,17 @@
             </div>
         </section> -->
 
-        <div class="container-banners">
-            <img src="img/Banner-2.jpeg" alt="">
-            <img src="img/Banner-1.jpeg" alt="">
-            <img src="img/banner.jpg" alt="">
-        </div>
+        <div id="slider">
+            <div>
+              <img src="img/Banner-2.jpeg" alt="Imagem 1" class="slide">
+            </div>
+            <div>
+              <img src="img/Banner-1.jpeg" alt="Imagem 2" class="slide">
+            </div>
+            <div>
+              <img src="img/banner.jpg" alt="Imagem 3" class="slide">
+            </div>
+          </div> 
 
         <section class="container-categoria">
             <h2 class="titulo-categoria">Destaques</h2>
@@ -478,7 +484,7 @@
 
 
 
-    
+
 
     <script src="js/carrossel.js"></script>
     <script src="js/buttonVoltarTopo.js"></script>
