--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <title>Sabrina Modas | Home</title>
 
 
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -156,27 +159,17 @@
 
     <main>
 
-        <!--         <section class="banner-container">
-            <div class="container-banners">
-                <div class="slide">
-                    <div>
-                        <img src="img/Banner-2.jpeg" alt="Imagem 2" class="banner">
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
-        <div id="slider">
+        <div class="container-banner" id="slider">
             <div>
-              <img src="img/Banner-2.jpeg" alt="Imagem 1" class="slide">
+                <img src="img/Banner-2.jpeg" alt="Imagem 1" class="banner">
             </div>
             <div>
-              <img src="img/Banner-1.jpeg" alt="Imagem 2" class="slide">
+                <img src="img/Banner-1.jpeg" alt="Imagem 2" class="banner">
             </div>
             <div>
-              <img src="img/banner.jpg" alt="Imagem 3" class="slide">
+                <img src="img/banner.jpg" alt="Imagem 3" class="banner">
             </div>
-          </div> 
+        </div>
 
         <section class="container-categoria">
             <h2 class="titulo-categoria">Destaques</h2>
@@ -482,9 +475,19 @@
         </div>
     </footer>
 
-
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"
+        integrity="sha512-h9kKZlwV1xrIcr2LwAPZhjlkx+x62mNwuQK5PAu9d3D+JXMNlGx8akZbqpXvp0vA54rz+DrqYVrzUGDMhwKmwQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"
+        integrity="sha512-h9kKZlwV1xrIcr2LwAPZhjlkx+x62mNwuQK5PAu9d3D+JXMNlGx8akZbqpXvp0vA54rz+DrqYVrzUGDMhwKmwQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"
+        integrity="sha512-fDGBclS3HUysEBIKooKWFDEWWORoA20n60OwY7OSYgxGEew9s7NgDaPkj7gqQcVXnASPvZAiFW8DiytstdlGtQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+        integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="js/carrossel.js"></script>
     <script src="js/buttonVoltarTopo.js"></script>
