migrando para o php

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="/dist/output.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <title>Sabrina Modas | Hme</title>
+    <title>Sabrina Modas | Home</title>
 
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
